@@ -1,3 +1,9 @@
+2017-10-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/peep.c:
+	  __z88dk_fastcall function pointer support for --reserve-regs-iy.
+
 2017-10-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx:
